#14298 closed bug (fixed)
[8086:3165] Intel iwm driver not loading for idualwifi7260
Reported by: | mrentropy | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Drivers/Network/idualwifi7260 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #15388, #15724, #16820 | |
Platform: | All |
Description
Intel Wireless 3165 should be supported by the iwm driver. It currently fails on boot using 32-bit and 64-bit builds.
According to Waddlesplash, the issue is here:
KERN: [idualwifi7260] (iwm) fw chunk addr 0x800000 len 98304 failed to load
KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section
KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639
Attachments (23)
Change History (88)
by , 7 years ago
Attachment: | Syslog-iwm3165.zip added |
---|
comment:1 by , 7 years ago
Component: | Network & Internet/Wireless → Drivers/Network/idualwifi7260 |
---|---|
Keywords: | iwm driver wireless 3165 intel removed |
Owner: | changed from | to
comment:3 by , 7 years ago
It appears the 3165 uses the "7265D" firmware: http://xref.plausible.coop/source/xref/haiku/src/add-ons/kernel/drivers/network/wlan/idualwifi7260/dev/iwm/if_iwm_7000.c#109
That's the exact same firmware my device uses, and it works, so I don't think that's the issue.
comment:5 by , 6 years ago
rev 52745
KERN: [idualwifi7260] (iwm) bus_alloc_resource(3, [16], 0x0, 0xffffffff, 0x1,0x2)
KERN: add_memory_type_range(2067, 0xa2100000, 0x2000, 0)
KERN: set MTRRs to:
KERN: mtrr: 0: base: 0x8a000000, size: 0x2000000, type: 0
KERN: mtrr: 1: base: 0xa0000000, size: 0x20000000, type: 0
KERN: mtrr: 2: base: 0xc0000000, size: 0x40000000, type: 0
KERN: mtrr: 3: base: 0x90000000, size: 0x10000000, type: 1
KERN: allocate_io_interrupt_vectors: allocated 1 vectors starting from 18
KERN: msi_allocate_vectors: allocated 1 vectors starting from 18
KERN: [idualwifi7260] (iwm) bus_alloc_resource(1, [1], 0x0, 0xffffffff, 0x1,0x2)
KERN: msi enabled: 0x0081
KERN: [idualwifi7260] (iwm) iwm_read_firmware: unknown firmware section 512, abort
KERN: [idualwifi7260] (iwm) firmware parse error -2147483643, section type 512
KERN: [idualwifi7260] (iwm) iwm_read_firmware: failed -2147483643
KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483643
comment:6 by , 6 years ago
HAIKU_FBSD_WLAN_DRIVER_GLUE(idualwifi7260, iwm, pci)
NO_HAIKU_FBSD_MII_DRIVER();
NO_HAIKU_REENABLE_INTERRUPTS();
HAIKU_DRIVER_REQUIREMENTS(FBSD_TASKQUEUES | FBSD_WLAN);
HAIKU_FIRMWARE_VERSION(1);
HAIKU_FIRMWARE_NAME_MAP(6) = {
{"iwm3160fw", "iwm-3160-17.ucode"},
{"iwm7260fw", "iwm-7260-17.ucode"},
{"iwm7265fw", "iwm-7265-17.ucode"},
{"iwm7265Dfw", "iwm-7265D-22.ucode"},
{"iwm8000Cfw", "iwm-8000C-22.ucode"},
{"iwm8265fw", "iwm-8265-22.ucode"},
};
comment:7 by , 6 years ago
Tried with 64-bit nightly hrev52730, with no success. Adding syslog from this rev.
comment:8 by , 6 years ago
See my comment in the other ticket: the "unknown firmware chunk 512" affects FreeBSD too, it's a 32-bit specific bug. 64-bit works.
comment:9 by , 6 years ago
Not sure what othe ticket you are refering to. I'm updating my other PC with realtek at the moment so I'll update there shortly. Odd that this occurs now and didn't before though I guess they don't test on 32bit that much.
comment:10 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:11 by , 6 years ago
For those with "could not load the [0] uCode section", retest after hrev52792.
comment:12 by , 6 years ago
I've tried the latest commit, the problem still exists
KERN: pci_reserve_device(3, 0, 0, idualwifi7260) KERN: [idualwifi7260] (iwm) bus_alloc_resource(3, [16], 0x0, 0xffffffffffffffff, 0x1,0x2) KERN: [idualwifi7260] (iwm) bus_alloc_resource(1, [1], 0x0, 0xffffffffffffffff, 0x1,0x2) KERN: [idualwifi7260] (iwm) fw chunk addr 0x800000 len 81920 failed to load KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639 KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483639 KERN: pci_unreserve_device(3, 0, 0, idualwifi7260)
comment:13 by , 6 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
comment:14 by , 6 years ago
It should probably be noted that on my Lenovo laptops they only load wifi from a fresh boot, regardless of the OS. Often enough a warm boot results in the wifi chip not coming up.
comment:15 by , 6 years ago
Yes, I have the same issue, but I get a different error in that case (the ucode loads successfully but then commands time out.)
comment:16 by , 6 years ago
So, I got access to some 3165 hardware, and it works fine. The RTL81xx ethernet chipset in this device also works. So I don't know what's going on here :/
comment:17 by , 6 years ago
Summary: | Intel iwm driver not loading for idualwifi7260 → [8086:3165] Intel iwm driver not loading for idualwifi7260 |
---|
comment:19 by , 5 years ago
Blocking: | 15388 added |
---|
comment:20 by , 5 years ago
Same issue here in hrev53561 x86_64:
grep idualwifi7260 /Haiku/system/var/log/syslog
KERN: pci_reserve_device(1, 0, 0, idualwifi7260) KERN: [idualwifi7260] (iwm) bus_alloc_resource(3, [16], 0x0, 0xffffffffffffffff, 0x1,0x2) KERN: [idualwifi7260] (iwm) bus_alloc_resource(1, [1], 0x0, 0xffffffffffffffff, 0x1,0x2) KERN: [idualwifi7260] (iwm) fw chunk addr 0x404000 len 712 failed to load KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639 KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483639
comment:21 by , 5 years ago
Blocking: | 15724 added |
---|
comment:22 by , 5 years ago
Appears some newer hardware is affected too; upstream FreeBSD bug: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=243992
comment:24 by , 5 years ago
in my case, I see no fw error, but the driver silently disconnects (see latest syslog attachment).
comment:25 by , 5 years ago
Uh ... this is a completely separate problem, which implies that firmware startup worked. This is also a completely different log from the one you posted on your other ticket, which was indeed a duplicate of this one. Please open a new ticket.
comment:26 by , 5 years ago
woah this is bogus - it works now! :-D
I got it to work after a cold start, where my laptop takes quite a while to POST in EFI mode, before even showing the boot menu. When I wait patiently and start Haiku this way, everything is fine (have to reproduce and check). When booting into Haiku after using Linux (Manjaro/Arch Linux 5.55 X86-64), WLAN stops working...
Will do some more triaging and then file a new issue.
comment:27 by , 5 years ago
I have an Intel 8265, running on hrev54051, x64, UEFI.
I am getting the same errors:
KERN: [idualwifi7260] (iwm) fw chunk addr 0x404000 len 712 failed to load KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section
I've seen the same bug is reported on FreeBSD (thanks for the link). I can try booting FreeBSD and seeing if the bug is resolved there.
comment:28 by , 5 years ago
Just tested booting FreeBSD 12.1 on the same machine, and while the firmware loads correctly, the card times out on any connection attempt.
I have not tried to boot Linux. I reckon the codebase is different, but if it works it would be interesting to see what are they doing.
comment:29 by , 5 years ago
The firmware loading or failing is permanent on some cards while on others it seems random. Cold boots often help. But other than that, I don't know.
comment:30 by , 5 years ago
This seems to be related to starting in EFI or BIOS mode. I had wireless working consistently *every time* with Haiku in a MBR/BIOS install, but it consistently *broke* again after reinstalling Haiku in EFI/GPT mode.
In Linux, the same setup works perfectly with cold or warm boot, EFI and BIOS mode, so I don't think that's a cause for the issue.
comment:33 by , 4 years ago
KERN: [idualwifi7260] (iwm) fw chunk addr 0x800000 len 81920 failed to load KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639 KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483639
comment:34 by , 4 years ago
Same here sadly... Would love to ditch that cable and external USB touchpad... (related since on the same chip in my laptop)
comment:35 by , 4 years ago
Blocking: | 16820 added |
---|
comment:36 by , 4 years ago
Someone reports on FreeBSD that this may be caused by the device being in MSI-X interrupt mode but the driver not supporting that: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=243992
Adding support for MSI-X may be easier than trying to disable it. Code in question: https://github.com/haiku/haiku/blob/8f16317a5b6db5c672f331814273e5857555020f/src/add-ons/kernel/drivers/network/wlan/idualwifi7260/dev/iwm/if_iwm.c#L5982
Example of another driver that supports MSIX: https://github.com/haiku/haiku/blob/8f16317a5b6db5c672f331814273e5857555020f/src/add-ons/kernel/drivers/network/emulex_oce/dev/oce/oce_if.c#L731
comment:37 by , 4 years ago
Just checked the reporter syslog and the device is MSI only, so it's unlikely that adding support for MSI-X will fix this.
comment:38 by , 3 years ago
Is this only on Lenovo hw? There are a lot of quirks for Lenovo in Linux so I think it might be Lenovo doing things their own way that may cause this.
comment:39 by , 3 years ago
A comment from the FreeBSD bug report: it is said that wireless works when booting with Ethernet connected.
comment:40 by , 3 years ago
Any changes here on recent nightlies?
Can anyone test the above suggestion (i.e. booting with ethernet connected?)
comment:41 by , 3 years ago
Just tested it on hrev55668, see the syslogs at https://dev.haiku-os.org/ticket/15396#comment:16
Note, that syslogs were made without ethernet connected, BUT i redid the test with ethernet attached, i haven't experienced any change, wifi is still unavailable.
comment:44 by , 3 years ago
Have the same issue on T460: wifi 7260/0 only being recognized when booting in legacy mode from usb flash.
comment:45 by , 3 years ago
I don't know if this helps, but with hrev55993, Wi-Fi works when I boot Haiku from being off. If I boot Haiku from a reboot from Linux, Wi-Fi doesn't work with this error:
KERN: [idualwifi7260] (iwm) fw chunk addr 0x404000 len 712 failed to load
KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section
KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639
KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483639
The machine is a System76 Oryx Pro with "Intel Dual Band Wireless-AC 9560 Wireless LAN (802.11ac) + Bluetooth".
by , 3 years ago
Attachment: | syslog.hrev55993.works.booted_from_off added |
---|
wifi works, hreb55993, booted Haiku from off state
by , 3 years ago
Attachment: | syslog.hrev55993.rebooted_from_linux added |
---|
wifi doesn't work, hrev55993, booted Haiku after reboot from Linux
comment:46 by , 3 years ago
Same issue on Lenovo W530 (intel8260)
KERN: [idualwifi7260] (iwm) fw chunk addr 0x404000 len 712 failed to load
KERN: [idualwifi7260] (iwm) iwm_pcie_load_section: Could not load the [0] uCode section
KERN: [idualwifi7260] (iwm) iwm_start_fw: failed -2147483639
KERN: [idualwifi7260] (iwm) Failed to start INIT ucode: -2147483639
Wifi work only in legacy mode. Doesn't work in UEFI.
I tested hrev55993 and following.
(In UEFI mode , Realtek RTL8188EU dongle , doesn't work.
That's work on OpenBSD 7.1, NetBSD 9, NomadBSD (Based on FreeBSD 13). )
follow-up: 51 comment:47 by , 3 years ago
Please retest after hrev56168, which imports the OpenBSD version of this driver. (Make sure you have the intel_wifi_firmwares version 2022_01_11 and wpa_supplicant version 2.10.haiku.1; these won't come with the default nightly images and must be retrieved via pkgman at the moment.)
by , 3 years ago
Attachment: | syslog.hrev56168 added |
---|
by , 3 years ago
Attachment: | syslog.old.hrev56168 added |
---|
comment:48 by , 3 years ago
I tried with hrev56168, which is the latest in the Depot. I don't know if that's okay, or if I should re-test with an hrev after that.
Haiku was able to see my Wi-Fi network, but failed to join. After failing to join, it would then fail to see any SSIDs. Disabling and re-enabling didn't help.
comment:49 by , 3 years ago
Looks like the firmware crashed, so it's not especially surprising that it would fail to see anything after that. It probably tried to just rejoin the last network on re-enabling it, so it's again unsurprising that it crashed again.
This is the same device as in comment:45? Any differences with a cold/warm reboot as you had before?
comment:50 by , 3 years ago
KERN: iwm: fw chunk addr 0x404000 len 712 failed to load KERN: iwm: could not load firmware chunk 0 (error -2147483639) KERN: iwm: failed to load init firmware
Same problem as seen in #17782. There's probably a common cause. Guess I need to try and reproduce this more.
comment:51 by , 3 years ago
Replying to waddlesplash:
Please retest after hrev56168, which imports the OpenBSD version of this driver. (Make sure you have the intel_wifi_firmwares version 2022_01_11 and wpa_supplicant version 2.10.haiku.1; these won't come with the default nightly images and must be retrieved via pkgman at the moment.)
I just tested with hrev56177 and intel_wifi_firmwares version 2022_01_11 (UEFI mode)
I can see now from wpa_supplicant /dev/net/idualwifi7260/0 (status is disconnected) but it doesn't work
(Realtek RTL8188EU dongle now operating in UEFI It's moving forward ;-) )
From syslog : KERN: [net/idualwifi7260/0] compat_open(0x2) KERN: iwm: fw chunk addr 0x404000 len 712 failed to load KERN: iwm: could not load firmware chunk 0 (error -2147483639) KERN: iwm: failed to load init firmware KERN: /dev/net/idualwifi7260/0: link down, media 0xa0 quality 1000 speed 0 KERN: [net/ipro1000/0] compat_open(0x2) KERN: /dev/net/ipro1000/0: link down, media 0x20 quality 1000 speed 0
I added the syslog file
by , 3 years ago
Attachment: | syslog.hrev56184 added |
---|
by , 3 years ago
Attachment: | syslog.old.hrev56184 added |
---|
comment:52 by , 3 years ago
KDL on hrev56184 shortly after successful connection to the wifi network and getting IP from DHCP.
by , 3 years ago
Attachment: | kdl_hrev56184.jpg added |
---|
comment:53 by , 3 years ago
If you can type at the KDL prompt, please type syslog | tail 30
and post that picture here.
by , 3 years ago
Attachment: | kdl_hrev56184_syslog_tail_30.jpg added |
---|
comment:54 by , 3 years ago
Thanks. I made some fixes earlier today and then edited the panic message to show the error in hrev56189. Please retest with that.
by , 3 years ago
Attachment: | kdl_idualwifi_hrev56193.jpg added |
---|
comment:55 by , 3 years ago
idualwifi hrev56193 connects to WiFi and gets an IP. KDL only happens when trying to use the network after unplugging Ethernet. Having a WiFi connection with Ethernet in use seems to be okay. Screenshot posted.
comment:56 by , 3 years ago
Your screenshot does not display the KDL message and stack trace, I need this particularly.
comment:57 by , 3 years ago
idualwifi hrev56193 Doesn't work on Lenovo W530
With this hrev, I have a KDL when Realtek RTL8188EU dongle is plugged.
by , 3 years ago
Attachment: | W530_KDL_hrev56193.jpg added |
---|
by , 3 years ago
Attachment: | kdl_hrev56184_all.jpg added |
---|
by , 3 years ago
Attachment: | kdl_hrev56184_dhcp.jpg added |
---|
by , 3 years ago
Attachment: | kdl_hrev56184_stacktrace.jpg added |
---|
by , 3 years ago
Attachment: | kdl_hrev56184_syslog.jpg added |
---|
comment:58 by , 3 years ago
With this hrev, I have a KDL when Realtek RTL8188EU dongle is plugged.
Tracked in #17804.
comment:60 by , 3 years ago
Replying to waddlesplash:
Please retest after hrev56202.
With hrev56202, I have a KDL (dongle Realtek RTL8188EU unplugged)
by , 3 years ago
Attachment: | W530_KDL_hrev56202.JPG added |
---|
comment:62 by , 3 years ago
No KDL on hrev56212 with idualwifi7260/0
, WebPositive
was able to surf the web and Vision
could join the Haiku dev chat, but Software Updater
, pkgman update
, ssh
hang.
comment:63 by , 3 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | reopened → closed |
There were reports of some package repositories being slow, so I suspect that is unrelated. SSH hanging is probably not a problem in this driver, but either way this ticket can probably be considered fixed, and a new one should be opened for other problems.
comment:64 by , 3 years ago
Replying to waddlesplash:
Please open a new ticket for Realtek WiFi problems.
I think the best option is to wait for before open a new ticket for dongle Realtek RTL8188EU.
I have KDL with idualwifi7260. This is the internal wifi card.
comment:65 by , 3 years ago
Yes, I see that now.
Please keep an eye on #17811. If you still have a KDL after that one gets fixed, open a new ticket.
Syslog contents of 32-bit build