idualwifi7260: Add error to panic message.

Should help with diagnosing the KDLs seen in #14298.